# ethernet-switch

./: .gitmodules  README.md
benchmark/: Makefile  bench_switch_latency.py  pyproject.toml  switchbench.py  types_arg.py
benchmark/latency/: __init__.py  command.py
benchmark/traffic/: __init__.py  command.py
fpga/: Makefile  vivado.mk
rtl/: switch.v  switch_cicq.v  switch_cicq_wrap.py  switch_crossbar.v  switch_crossbar_cicq.v  switch_crossbar_iq.v  switch_crossbar_iq_voq.v  switch_crossbar_oq.v  switch_iq.v  switch_iq_voq.v  switch_iq_voq_wrap.py  switch_iq_wrap.py  switch_oq.v  switch_oq_wrap.py  switch_wrap.py
test/switch/: Makefile  pyproject.toml  test_switch.py
test/switch_cicq/: Makefile  pyproject.toml  test_switch_cicq.py
test/switch_iq/: Makefile  pyproject.toml  test_switch_iq.py
test/switch_iq_voq/: Makefile  pyproject.toml  test_switch_iq_voq.py
test/switch_oq/: Makefile  test_switch_oq.py
